2002-09-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (require_variables): The fix introduced in 2002-09-19
	is imcomplete.  Rewrite the conditional variable definition check
	using &variable_not_always_defined_in_cond.
	* tests/cond26.test, tests/cond27.test, tests/cond28.test: New file.
	* tests/Makefile.am (TESTS): Add cond26.test, cond27.test, and
	cond28.test.
	Reported by Juergen Keil.

	* automake.in (INTERNAL): Redefine as an empty location,
	so that internal locations get displayed as `automake:'.

	* lib/am/distdir.am (distdir): Create $dc_destdir right before
	its use.
	Reported by Akim Demaille.

	Fix for PR automake/366:
	* automake.in (handle_dist): Strip $(srcdir) and replace
	$(top_srcdir) when computing DIST_COMMON directories.
	* tests/include2.test: Use an obsolute $(srcdir), and check
	for spurious directories in $(distdir)/sub.
	* lib/am/distdir.am: Rewrite $(top_srcdir) as $(top_builddir).
	Reported by Kevin Ryde.

2002-09-29  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/Automake/Channels.pm (%_default_options): Add 'partial'.
	(_format_message): Rename as ...
	(_format_sub_message): ... this.
	(_format_message): New function, extracted from ...
	(_print_message): ... here.  Honor the 'partial' option.
	($partial): New variable.
	* automake.in (handle_ltlibraries, check_ambiguous_conditional,
	rule_define): Mark partial messages.

	* automake.in (handle_ltlibraries): Record library locations in
	%liblocations, and print the previous declaration on error.
	* tests/libtool6.test: Check that the locations of the two
	definitions are shown.

	For PR automake/360:  Propagate more locations.
	* automake.in (handle_programs): Adjust usage of am_install_var's
	return value.  Pass on locations as context to file_contents.
	(handle_libraries, handle_ltlibraries): Likewise.  Use locations
	in the 'not a standard library name' diagnostic.
	(handle_emacs_lisp, handle_python): Adjust usage of am_install_var's