@@ -1,3 +1,9 @@
+2002-09-30  Kevin Ryde  <user42@zip.com.au>
+
+	* m4/as.m4 (AM_PROG_AS): Let CCAS and CCASFLAGS default to the actual
+	values of $CC and $CFLAGS (as opposed to $(CC) and $(CFLAGS)), so
+	configure tests can use them.  Use AC_ARG_VAR instead of AC_SUBST.
+
 2002-09-30  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (require_variables): The fix introduced in 2002-09-19
